--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/npm": "^5.1.9",
+    "husky": "^2.4.0",
     "semantic-release": "^15.13.16"
   },
   "scripts": {
