feat: multiple content edits, add new New WC issue option
- Remove REFs support from docs #8
- Update repo name #9
- New issue type to request component
- New listing and status page for listing of tools

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@alaskaairux/ods-docs",
+  "name": "@alaskaairux/auro-docs",
   "version": "1.1.2",
-  "description": "Orion Design System global docs",
+  "description": "Auro Design System global docs",
   "author": "Product design and research",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AlaskaAirlines/OrionStatelessComponents__docs"
+    "url": "https://github.com/AlaskaAirlines/auro_docs"
   },
   "main": "docs/",
   "license": "Apache-2.0",
@@ -72,8 +72,8 @@
   ],
   "keywords": [
     "alaska airlines",
-    "orion design system",
+    "design system",
     "web components",
-    "hyperlink"
+    "docs"
   ]
 }
