--- a/.github/labelSettings.json
+++ b/.github/labelSettings.json
@@ -193,5 +193,170 @@
       "test",
       "testing"
     ]
+  },
+  {
+    "name": "Epic: Project Version Zero",
+    "color": "222222",
+    "description": "Identifier of project epic issue."
+  },
+  {
+    "name": "Epic: Auro User Definition",
+    "color": "222222",
+    "description": "Identifier of project epic issue."
+  },
+  {
+    "name": "Project: Auro User Definition",
+    "color": "222222",
+    "description": "Issues related to the epic User Research"
+  },
+  {
+    "name": "Epic: Doc Site Strategy",
+    "color": "222222",
+    "description": "Identifier of project epic issue."
+  },
+  {
+    "name": "Project: Doc Site Strategy",
+    "color": "222222",
+    "description": "Issues related to the epic Doc Site Strategy"
+  },
+  {
+    "name": "Status: Epic in progress",
+    "color": "222222",
+    "description": "Epic has issue(s) in progress"
+  },
+  {
+    "name": "Priority: Audit",
+    "color": "ff94a7",
+    "description": "Priority status specifically for DS Audit use"
+  },
+  {
+    "name": "AuroLabs",
+    "color": "000000",
+    "description": "New element development in restricted space"
+  },
+  {
+    "name": "Audit: Actions",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Informational",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Structural",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Inputs",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Navigation",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Contextual",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Content",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Patterns",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Audit: Content Layouts",
+    "color": "ffffff",
+    "description": ""
+  },
+  {
+    "name": "Artwork: ODS/V0 Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "UI Kit: ODS/V0 Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Code: ODS/V0 Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Docs: ODS/V0 Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Artwork: ADS Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "UI Kit: ADS Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Code: ADS Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Docs: ADS Compliant",
+    "color": "91be62",
+    "description": ""
+  },
+  {
+    "name": "Artwork: In Progress",
+    "color": "ffd200",
+    "description": ""
+  },
+  {
+    "name": "UI Kit: In Progress",
+    "color": "ffd200",
+    "description": ""
+  },
+  {
+    "name": "Code: In Progress",
+    "color": "ffd200",
+    "description": ""
+  },
+  {
+    "name": "Docs: In Progress",
+    "color": "ffd200",
+    "description": ""
+  },
+  {
+    "name": "Artwork: Backlogged",
+    "color": "de3e09",
+    "description": ""
+  },
+  {
+    "name": "UI Kit: Backlogged",
+    "color": "de3e09",
+    "description": ""
+  },
+  {
+    "name": "Code: Backlogged",
+    "color": "de3e09",
+    "description": ""
+  },
+  {
+    "name": "Docs: Backlogged",
+    "color": "de3e09",
+    "description": ""
   }
 ]
